--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       "@testing-library/react": "^13.4.0",
       "@testing-library/user-event": "^13.5.0",
       "axios": "^1.3.0",
+      "moment": "^2.29.4",
       "query-string": "^8.1.0",
       "react": "^18.2.0",
       "react-circular-progressbar": "^2.1.0",
@@ -19,6 +20,7 @@
       "react-router-dom": "^6.8.0",
       "react-scripts": "5.0.1",
       "sass": "^1.58.0",
+      "swiper": "^6.8.4",
       "web-vitals": "^2.1.4"
    },
    "scripts": {
