--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
       "react": "^18.2.0",
       "react-circular-progressbar": "^2.1.0",
       "react-dom": "^18.2.0",
+      "react-loading-skeleton": "^3.1.0",
       "react-paginate": "^8.1.4",
       "react-router-dom": "^6.8.0",
       "react-scripts": "5.0.1",
